<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/registro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/teal_700"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="@string/nuevo_registro"/>
    <TextView
        android:id="@+id/ingresoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/ingresar_usuario" />
    <EditText
        android:id="@+id/usuarioNuevo"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:hint="@string/usuario_nuevo"/>
    <TextView
        android:id="@+id/ingresoPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/ingresar_pass" />
    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/pass"/>
    <TextView
        android:id="@+id/reingresoPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/reingreso_pass" />
    <EditText
        android:id="@+id/reingPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/pass"/>
    <Button
        android:id="@+id/botonCrear"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/crear_user"/>
</LinearLayout>